# ai_assitant

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  __init__.py  ai_agent.py  docker-compose.yaml  pyproject.toml
backend/ai_agents/: basic_ai_agent.py
backend/app-env/: pyvenv.cfg
backend/app-env/Scripts/: activate  activate.bat
backend/prototypes_dev/: gerard_llm.ipynb
backend/scr/: __init__.py
backend/scr/ai_agents/: basic_ai_agent.py
backend/scr/app/static/assets/css/: main.css
backend/scr/app/templates/: index.html
backend/src/: __init__.py
backend/src/agents/: ai_interface.py  basic_retriever.py  sql.py  tools.py
backend/src/ai_agents/: basic_ai_agent.py  spare_code.py
backend/src/app/: app.py
backend/src/app/static/assets/css/: main.css
backend/src/app/static/assets/js/: chatbot.js
backend/src/app/templates/: base.html  chatbot.html  index.html
backend/src/cleo_api/: Dockerfile  main_cleo_api.py  pyproject.toml
backend/src/cleo_api/agents/: cleo.py
backend/src/cleo_api/memory/: cleo_memory.json
backend/src/utils/: logger.py
