[tool.poetry]
name = "ai-assistant-packaging"
version = "0.1.0"
description = ""
authors = ["Gerard Church <gerardchurch133@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.44.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
