[tool.poetry]
name = "cleo-api"
version = "0.1.0"
description = ""
authors = ["Gerard Church <gerardchurch133@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
langchain = "^0.3.9"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
langchain-community = "^0.3.8"
langchain-openai = "^0.2.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
